--- a/short_movie/shortmovie_v2/shortmovie/vision_image_retrieval.ipynb
+++ b/short_movie/shortmovie_v2/shortmovie/vision_image_retrieval.ipynb
@@ -118,9 +118,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "os.environ[\"VISION_ENDPOINT\"] = \"https://vision-movie.cognitiveservices.azure.com/\"\n",
-    "os.environ[\"VISION_API_KEY\"] = \"6b76e18bf1ea4948a3d7b302df8ea32c\""
+    "load_dotenv()\n",
+    "\n",
+    "VISION_ENDPOINT = os.getenv('VISION_ENDPOINT')\n",
+    "VISION_API_KEY = os.getenv('VISION_API_KEY')"
    ]
   },
   {
